# cousins-matter

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .readthedocs.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  SECURITY.md  classified_ads_n+1_analysis.md  clean_database.sh  dev-requirements.txt  docker-compose-migrate.yaml  docker-compose.ci.yml  docker-compose.debug.yml  docker-compose.override.yml  docker-compose.override.yml.back  docker-compose.yml  entrypoint.sh  lighttpd.conf  manage.py  manual-start.sh  mkdocs.yml  nginx.conf  package-lock.json  package.json  prepare-envt.sh  pyproject.toml  release.txt  requirements-dev.txt  requirements.txt  resolve_conflicts.py  rm_images.sh  ruff.toml  supervisord.conf  template.lighttpd.conf  template.supervisord.conf
.github/: dependabot.yml  release.yml
accounts/: forms.py  tests.py  urls.py  views.py
chat/: admin.py  apps.py  consumers.py  models.py  routing.py  tests.py  urls.py  views.py
classified_ads/: admin.py  apps.py  categories.py  forms.py  models.py  tests.py  urls.py  views.py
cm_main/: admin.py  apps.py  followers.py  forms.py  mixins.py  models.py  open.code-search  tests.py  urls.py  utils.py  views.py  widgets.py
config/: nginx.conf
core/: .htmlvalidate.json  apps.py  context_processors.py  followers.py  forms.py  htmlvalidator.py  icons.py  middleware.py  models.py  settings.py  tasks.py  tasks_schedules.py  urls.py  utils.py  widgets.py
cousinsmatter/: .htmlvalidate.json  asgi.py  context_processors.py  htmlvalidator.py  icons.py  settings.py  (+3 more)
(+881 files in other folders)
