[project]
name = "cousins-matter"
version = "2.4.1"
description = "A family social network"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "av~=17.1.0",
    "blessed>=1.44,<1.47",
    "channels~=4.3.2",
    "channels-redis~=4.3.0",
    "crispy-bulma~=0.12.0",
    "daphne~=4.2.2",
    "django~=6.0.6",
    "django-allauth[socialaccount]~=65.18.0",
    "django-cors-headers~=4.9.0",
    "django-crispy-forms~=2.6",
    "django-email-validation~=2.1.1",
    "django-environ~=0.14.0",
    "django-htmx~=1.27.0",
    "django-ipware~=7.0.1",
    "django-q2~=1.10.0",
    "django-simple-captcha~=0.6.3",
    "django-storages[dropbox,s3]~=1.14.6",
    "fpdf~=1.7.2",
    "packaging~=26.2",
    "pillow~=12.2.0",
    "psycopg-pool~=3.3.1",
    "psycopg[binary]~=3.3.4",
    "python-gedcom~=1.1.0",
    "requests~=2.34.2",
    "whitenoise~=6.12.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.3",
    "css-html-js-minify>=2.5.5",
    "django-debug-toolbar~=7.0.0",
    "factory-boy~=3.3.3",
    "mypy==2.1.0",
    "playwright>=1.61.0",
    "ruff>=0.15.20",
    "types-requests>=2.33.0.20260518",
]
ai = [
    "headroom-ai[code,mcp,memory,proxy]>=0.23.0",
]
